--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ title: Let's Talk
 email: 3nan.ajmain@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
     This is an experimental site for publishing fictions and think-pieces.
-baseurl: "/letstalk" # the subpath of your site, e.g. /blog
+baseurl: "/LetsTalk" # the subpath of your site, e.g. /blog
 url: "https://3n4n.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: enan_ajmain
 github_username:  3N4N
